# pvr.wmc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-pvr-wmc.install  rules
pvr.wmc/: addon.xml  addon.xml.in  changelog.txt
pvr.wmc/resources/language/resource.language.af_za/: strings.po
pvr.wmc/resources/language/resource.language.am_et/: strings.po
pvr.wmc/resources/language/resource.language.ar_sa/: strings.po
pvr.wmc/resources/language/resource.language.ast_es/: strings.po
pvr.wmc/resources/language/resource.language.az_az/: strings.po
pvr.wmc/resources/language/resource.language.be_by/: strings.po
pvr.wmc/resources/language/resource.language.bg_bg/: strings.po
pvr.wmc/resources/language/resource.language.bs_ba/: strings.po
pvr.wmc/resources/language/resource.language.ca_es/: strings.po
pvr.wmc/resources/language/resource.language.cs_cz/: strings.po
pvr.wmc/resources/language/resource.language.cy_gb/: strings.po
pvr.wmc/resources/language/resource.language.da_dk/: strings.po
pvr.wmc/resources/language/resource.language.de_de/: strings.po
pvr.wmc/resources/language/resource.language.el_gr/: strings.po
pvr.wmc/resources/language/resource.language.en_au/: strings.po
pvr.wmc/resources/language/resource.language.en_gb/: strings.po
pvr.wmc/resources/language/resource.language.en_nz/: strings.po
pvr.wmc/resources/language/resource.language.en_us/: strings.po
pvr.wmc/resources/language/resource.language.eo/: strings.po
pvr.wmc/resources/language/resource.language.es_ar/: strings.po
pvr.wmc/resources/language/resource.language.es_es/: strings.po
pvr.wmc/resources/language/resource.language.es_mx/: strings.po
pvr.wmc/resources/language/resource.language.et_ee/: strings.po
pvr.wmc/resources/language/resource.language.eu_es/: strings.po
pvr.wmc/resources/language/resource.language.fa_af/: strings.po
pvr.wmc/resources/language/resource.language.fa_ir/: strings.po
pvr.wmc/resources/language/resource.language.fi_fi/: strings.po
pvr.wmc/resources/language/resource.language.fo_fo/: strings.po
pvr.wmc/resources/language/resource.language.fr_ca/: strings.po
pvr.wmc/resources/language/resource.language.fr_fr/: strings.po
pvr.wmc/resources/language/resource.language.gl_es/: strings.po
pvr.wmc/resources/language/resource.language.he_il/: strings.po
pvr.wmc/resources/language/resource.language.hi_in/: strings.po
pvr.wmc/resources/language/resource.language.hr_hr/: strings.po
pvr.wmc/resources/language/resource.language.hu_hu/: strings.po
pvr.wmc/resources/language/resource.language.mi/: strings.po
src/: DialogDeleteTimer.cpp  DialogDeleteTimer.h  DialogRecordPref.cpp  DialogRecordPref.h  Socket.cpp  Socket.h  addon.cpp  addon.h  client.cpp  client.h  clientversion.h  pvr2wmc.cpp  pvr2wmc.h  settings.cpp  settings.h  utilities.cpp  utilities.h
(+39 files in other folders)
